<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.InterViewQuesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/top_10_questions"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_1_what_is_java"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_2_what_are_the_oops"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_3_what_is_the_difference_between_jdk_jre_and_jvm"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_4_explain_the_significance_"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="5. What is the difference between an interface and an abstract class in Java?"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_6_what_is_the_difference_"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_7_what_is_the_java_memory"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_8_what_are_the_different_access_modifiers_in_java_"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_9_what_is_the_purpose_of_the_try_"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_10_what_is_multithreading_i"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>