<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".myDashboardActivity.ErrorExceptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        app:title="Error and Exception"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_heading"
                android:textColor="@color/heading_color"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/heading_item"
                android:text="@string/error"
                android:textColor="#000000"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_program_heading"
                android:textColor="@color/program_color"
                android:textStyle="bold"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_program"
                android:textColor="#000000"
                android:background="@drawable/program_item"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Exception"
                android:textColor="@color/heading_color"
                android:textStyle="bold"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/heading_two_item"
                android:text="@string/exception_prog"
                android:textColor="#000000"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="// Example of IOException (a checked exception)"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/program_item"
                android:text="@string/exception_example"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>